[NF] Configured navigation component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Spark</string>
+
+    <string name="toolbar_inbox">Inbox</string>
+
+
+    <string name="action_search">Search</string>
+
+    <string name="action_show_all">Show all</string>
+
 </resources>
