--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <string name="action_show_all">Show all</string>
 
+    <string name="action_read">Read</string>
+    <string name="action_unread">Unread</string>
+    <string name="action_delete_message">Delete</string>
+
 </resources>
